...
        )
        val visibleWeek = rememberFirstVisibleWeekAfterScroll(state)
        TopAppBar(
            modifier = Modifier.height(IntrinsicSize.Min),
            title = {
                Column {
                    Text(modifier = Modifier.testTag("maand"), text = getWeekPageTitle(visibleWeek), fontSize = 25.sp)
                    Text(
                        text = "${GlobalDoctor.doctor?.name}",
                        fontSize = 16.sp,
                    )
                }
            },
...
                        color = Color.Gray,
                        shape = MaterialTheme.shapes.small
                    )
                ) {
                    Icon(
                        imageVector = Icons.Default.Person,
                        contentDescription = "Dropdown",
                        modifier = Modifier.padding(4.dp),
                        tint = colorResource(id = R.color.white)
                    )
                    Spacer(modifier = Modifier.height(4.dp))
                    DropdownMenu(
                        expanded = dropdownExpanded,
...
