...
        Spacer(modifier = Modifier.height(16.dp))
        Button(onClick = { onEdit() },
            modifier = Modifier
                .fillMaxWidth()
                .height(50.dp)
        ) {
            Text(text = "Edit")
        }
        Spacer(modifier = Modifier.height(4.dp))
        Button(
            modifier = Modifier
                .fillMaxWidth()
                .height(50.dp),
...
