...
                .fillMaxSize(),
            horizontalAlignment = Alignment.Start

        )
        {
            Text(
                "Your notes",
                fontSize = 40.sp,
                modifier = Modifier.padding(10.dp),
            )

            Spacer(modifier = Modifier.height(16.dp))

...
        FloatingActionButton(
            onClick = { isDialogOpen = true },
            modifier = Modifier
                .align(Alignment.BottomEnd)
                .padding(16.dp)
        ) {
            Icon(imageVector = Icons.Default.Add, contentDescription = "Add_note")
        }


        AnimatedVisibility(
            visible = isDialogOpen,
            enter = fadeIn(),
...
